<resources>
    <string name="app_name">Esper SDK Sample App</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="grant_settings_write_perms_text">Grant System Settings Write Permissions</string>
    <string name="api_level_prefix">Esper Agent Device SDK information:\nAPI Level: %s\nRelease Name: %s</string>
    <string name="information">Information</string>
    <string name="execute">Execute</string>
    <string name="token_input_hint">Enter API Access Token</string>
    <string name="activate">Activate</string>
    <string name="sdk_not_activated_msg">Esper Agent Device SDK is not activated.</string>
    <string name="sdk_activated_msg">Esper Agent Device SDK is activated.</string>
    <string name="enter_token">Token is not entered.</string>
    <string name="enter_input">Input is not entered.</string>
    <string name="clear_app_data_input_prompt">Enter the package names in separate lines</string>
    <string name="android_versions_min">This method is supported in Android API level %d and above. This device Android API Level is %d.</string>
    <string name="activate_sdk_success">Success. SDK is now activated.</string>
    <string name="activate_sdk_fail">Activation Failed. The token entered was not valid, please retry.</string>
    <string name="start_dock_success">Success. Tap multiple times on top right corner of the screen to see the chevron of the dock. Tap on chevron to see the dock.</string>
    <string name="show_dock_success">Success. Dock chevron is revealed at the top right corner of the screen. Tap on chevron to see the dock.</string>
    <string name="esper_agent_not_found">Install Esper Agent and relaunch this application.</string>
    <string name="password">Password</string>
    <string name="hotspot_name_input_prompt">Pick a name for your Hotspot</string>
    <string name="result">Result : %1s</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="apn_id">APN ID</string>
    <string name="apn_config_json_string">Paste APN Config JSON string</string>
    <string name="app_configurations_json_string">Paste App Configurations JSON String</string>
    <string name="no_network_fallback_config_json_string">Paste No Network Fallback Configuration JSON String</string>
    <string name="brightness_scale">Brightness Scale</string>
    <string name="power_button">Power Button</string>
    <string name="changeButtonText">Change</string>
    <string name="app_state_change_success">App State changed successfully</string>
    <string name="app_state_change_failure">App state change failed</string>
    <string name="app_state_select_message">Please select a state</string>
    <string name="enter_package_name">Enter the app\'s package name</string>

    <!-- SDK Methods [in ascending order] -->
    <string name="add_apn">addAPN</string>
    <string name="allow_power_off">allowPowerOff</string>
    <string name="change_app_state">changeAppState</string>
    <string name="clear_app_data">clearAppData</string>
    <string name="config_no_network_fallback">configNoNetworkFallback</string>
    <string name="enable_mobile_data">enableMobileData</string>
    <string name="enable_wifi_tethering">enableWifiTethering</string>
    <string name="get_device_settings">getDeviceSettings</string>
    <string name="get_esper_device_info">getEsperDeviceInfo</string>
    <string name="get_esper_removable_storage_path">getEsperRemovableStoragePath</string>
    <string name="reboot">reboot</string>
    <string name="remove_apn">removeAPN</string>
    <string name="set_app_op_mode">setAppOpMode</string>
    <string name="set_brightness">setBrightness</string>
    <string name="set_default_apn">setDefaultAPN</string>
    <string name="set_global_setting">setGlobalSetting</string>
    <string name="set_device_orientation">setDeviceOrientation</string>
    <string name="set_system_setting">setSystemSetting</string>
    <string name="show_dock">showDock</string>
    <string name="start_dock">startDock</string>
    <string name="stop_dock">stopDock</string>
    <string name="update_apn">updateAPN</string>
    <string name="update_app_configurations">updateAppConfigurations</string>
    <string name="launch_eea_apis_demo">Launch EEA APIs Demo</string>

    <string-array name="sdkMethods">
        <item>Please select a Esper Device SDK method</item>
        <!-- Below items need to be in alphabetically ascending order -->
        <item>@string/add_apn</item>
        <item>@string/allow_power_off</item>
        <item>@string/change_app_state</item>
        <item>@string/clear_app_data</item>
        <item>@string/config_no_network_fallback</item>
        <item>@string/enable_mobile_data</item>
        <item>@string/enable_wifi_tethering</item>
        <item>@string/get_device_settings</item>
        <item>@string/get_esper_device_info</item>
        <item>@string/get_esper_removable_storage_path</item>
        <item>@string/reboot</item>
        <item>@string/remove_apn</item>
        <item>@string/set_app_op_mode</item>
        <item>@string/set_brightness</item>
        <item>@string/set_default_apn</item>
        <item>@string/set_global_setting</item>
        <item>@string/set_device_orientation</item>
        <item>@string/set_system_setting</item>
        <item>@string/show_dock</item>
        <item>@string/start_dock</item>
        <item>@string/stop_dock</item>
        <item>@string/update_apn</item>
        <item>@string/update_app_configurations</item>
        <item>@string/launch_eea_apis_demo</item>
    </string-array>

    <string-array name="appStates">
        <item>Please select a state</item>
        <item>DISABLE</item>
        <item>HIDE</item>
        <item>SHOW</item>
    </string-array>

    <string-array name="orientations">
        <item>Please select a orientation</item>
        <item>AUTO</item>
        <item>INVERTED_PORTRAIT_ONLY</item>
        <item>INVERTED_LANDSCAPE_ONLY</item>
        <item>LANDSCAPE_ONLY</item>
        <item>PORTRAIT_ONLY</item>
    </string-array>
</resources>