<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_margin">

        <TextView
            android:id="@+id/apiLevelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/custom_margin"
            android:text="@string/api_level_prefix"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/activationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/tokenInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/activate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxLength="512"
                android:maxLines="10"
                android:text="@string/activate" />

        </LinearLayout>

        <Spinner
            android:id="@+id/sdkMethodSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:visibility="gone" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mobileDataSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/mobile_data"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/sdkMethodInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/execute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxLength="512"
                android:maxLines="10"
                android:text="@string/execute" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/outputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sdkMethodResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/changeAppStateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/packageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/small_margin" />

            <Spinner
                android:id="@+id/appStateSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:gravity="center" />

            <Button
                android:id="@+id/changeAppStateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:maxLength="512"
                android:maxLines="10"
                android:text="@string/changeButtonText" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>